for #choices, i changed the flex direction from row to column , for <576px sscreen resolution

--- a/app.css
+++ b/app.css
@@ -236,6 +236,7 @@ p{
     z-index: 2;
     left: 3rem;
     top: 1rem;
+    margin-top: 1rem;
     border: 2px solid ;
     border-radius: 8px;
     padding: 0.7rem;
