--- a/queries.css
+++ b/queries.css
@@ -33,7 +33,8 @@
     #scoreDisplay{
         position: static;
         margin-bottom: 2rem;
-        width: 15rem;
+        width: 30%;
+
     }
 }
 
@@ -50,6 +51,10 @@
 
     #choices{
         flex-direction: column;
+    }
+
+    #scoreDisplay{
+        width: 30%;
     }
 
     
